fix the style on mobile phone page

--- a/colorGame.css
+++ b/colorGame.css
@@ -43,7 +43,7 @@ h1 {
 #stripe {
     display: flex;
     background:white;
-    height: 30px;
+    height: 35px;
     text-align: center;
     color: black;
 }
